Collapsable list display bugs fixed

--- a/src/components/global-components/collapsable-list/button/button.scss
+++ b/src/components/global-components/collapsable-list/button/button.scss
@@ -1,7 +1,6 @@
 @import "global-styles/variables_and_mixins";
 
 .button {
-    margin-top: 5px;
     font-weight: 700;
     font-size: 16px;
     color: $darkGrey;
