--- a/src/components/main/catalogues/catalogue/catalogue-item/catalogueItem.scss
+++ b/src/components/main/catalogues/catalogue/catalogue-item/catalogueItem.scss
@@ -28,7 +28,7 @@
             }
             .itemData,
             .itemFields {
-                margin: 0 5px 5px;
+                margin: 0 5px 15px;
             }
         }
     }
